# Intelligent-Acquisition-of-Visual-Information

./: README.md
finalProject/: final_data.txt  readME.txt  readme.txt
finalProject/Calibration/: cali  default.xml  in.xml  pic_in.xml  pic_track175.xml  pic_track178.xml  pic_track181.xml  track175.xml  track178.xml  track181.xml
finalProject/Software/: CMakeLists.txt  camera.cpp  camera.h  group.cpp  group.h  hit.h  image.cpp  image.h  input.txt  light.cpp  main.cpp  material.cpp  material.h  object3d.h  plane.h  ray.h  raytracer.cpp  raytracer.h  scene_parser.cpp
finalProject/imgsRendered/: 0.tga  1.tga  10.tga  100.tga  101.tga  102.tga  103.tga  104.tga  105.tga  106.tga  107.tga  108.tga  109.tga  11.tga  110.tga  111.tga  112.tga  113.tga  114.tga  115.tga  116.tga  117.tga  118.tga  119.tga  12.tga  120.tga  121.tga  122.tga  123.tga  124.tga  125.tga  126.tga  127.tga  128.tga  129.tga  13.tga  130.tga  131.tga  132.tga  133.tga  (+160 more)
finalProject/imgsTaken/Round1/: readme.txt
finalProject/imgsTaken/Round2/: readme.txt
